--- a/NoteWork/Base.lproj/Main.storyboard
+++ b/NoteWork/Base.lproj/Main.storyboard
@@ -192,8 +192,8 @@
                         <outlet property="signInBtnToPasswordConstraint" destination="8FX-qj-uZl" id="RVe-sd-rj3"/>
                         <outlet property="signUpLabel" destination="R2n-LS-qpS" id="Twr-Xc-3c5"/>
                         <outlet property="usernameTextField" destination="mxn-X4-3Ff" id="eZF-Eb-d23"/>
-                        <segue destination="8KL-gs-Ty8" kind="presentation" identifier="goToSignUp" id="lex-Nv-AJH"/>
-                        <segue destination="Gco-Wy-IUy" kind="showDetail" identifier="goToFeedScreen" id="JBS-3y-fbT"/>
+                        <segue destination="8KL-gs-Ty8" kind="presentation" identifier="GoToSignUp" id="lex-Nv-AJH"/>
+                        <segue destination="Gco-Wy-IUy" kind="showDetail" identifier="GoToTabBar" id="JBS-3y-fbT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -219,7 +219,7 @@
             </objects>
             <point key="canvasLocation" x="2140" y="487"/>
         </scene>
-        <!--jwilliams-->
+        <!--Profile-->
         <scene sceneID="6sF-my-VnV">
             <objects>
                 <viewController id="fFa-yC-Qca" customClass="ProfileVC" customModule="NoteWork" customModuleProvider="target" sceneMemberID="viewController">
@@ -234,7 +234,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LEP-mf-dh6">
                                 <rect key="frame" x="0.0" y="64" width="375" height="180"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Williams" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kzf-aI-ztZ">
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Williams" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kzf-aI-ztZ">
                                         <rect key="frame" x="8" y="116" width="359" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="zL0-GN-6bm"/>
@@ -243,13 +243,13 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Computer Engineering" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5a-BQ-hra">
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="john.williams@ozu.edu.tr" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5a-BQ-hra" userLabel="User Email">
                                         <rect key="frame" x="8" y="145" width="359" height="21"/>
                                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="uXh-Gn-4xl">
+                                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="uXh-Gn-4xl">
                                         <rect key="frame" x="137.5" y="8" width="100" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="height" priority="500" constant="100" id="cd8-gv-uEe"/>
@@ -281,15 +281,15 @@
                             <constraint firstItem="LEP-mf-dh6" firstAttribute="leading" secondItem="wlZ-4h-ufv" secondAttribute="leading" id="iKw-zY-79t"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="jwilliams" id="0T4-yf-bgc">
+                    <navigationItem key="navigationItem" title="Profile" id="0T4-yf-bgc">
                         <barButtonItem key="rightBarButtonItem" image="Settings" id="MXO-DD-Ua1">
                             <connections>
-                                <segue destination="o1T-63-KjI" kind="show" id="pOz-pw-xfs"/>
+                                <segue destination="o1T-63-KjI" kind="show" identifier="GoToSettings" id="pOz-pw-xfs"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="userDepartment" destination="c5a-BQ-hra" id="sWR-wN-lbe"/>
+                        <outlet property="userEmail" destination="c5a-BQ-hra" id="Jzk-Dw-Apg"/>
                         <outlet property="userFullName" destination="Kzf-aI-ztZ" id="icj-6B-TtJ"/>
                         <outlet property="userImage" destination="uXh-Gn-4xl" id="5fH-2a-Faz"/>
                     </connections>
@@ -313,7 +313,7 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0In-vS-1v9">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="yYC-IF-YWL">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="yYC-IF-YWL">
                                         <rect key="frame" x="137" y="8" width="100" height="99.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" priority="500" constant="100" id="bju-1u-WBy"/>
@@ -597,10 +597,10 @@
             </objects>
             <point key="canvasLocation" x="3079.1999999999998" y="-191.1544227886057"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Tab BarVC-->
         <scene sceneID="zxX-6y-40Z">
             <objects>
-                <tabBarController id="Gco-Wy-IUy" sceneMemberID="viewController">
+                <tabBarController id="Gco-Wy-IUy" customClass="TabBarVC" customModule="NoteWork" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleAspectFit" id="562-xA-DWw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -689,7 +689,7 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="signUpBtnTapped:" destination="8KL-gs-Ty8" eventType="touchUpInside" id="vPC-Kk-43C"/>
+                                            <action selector="signUpButtonTapped:" destination="8KL-gs-Ty8" eventType="touchUpInside" id="hk8-jg-Vym"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NoteWork" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ql-7Y-RVX">
@@ -772,12 +772,13 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cancelButton" destination="h0i-sM-kBw" id="Ifp-05-9cy"/>
                         <outlet property="emailTxtField" destination="zLw-vK-VAj" id="uhY-Mr-RUB"/>
                         <outlet property="nameTxtField" destination="DWo-qD-cYt" id="Uvz-cX-VkY"/>
                         <outlet property="passwordTxtField" destination="KT6-5K-lxC" id="uUc-4X-E4E"/>
                         <outlet property="repeatPassworddTxtField" destination="aba-iG-oK9" id="F7N-Ek-Uri"/>
                         <outlet property="scrollView" destination="VzC-h9-TRb" id="IOk-T3-mfO"/>
-                        <outlet property="signUpBtn" destination="6jK-ku-uAO" id="wMo-yS-we6"/>
+                        <outlet property="signUpButton" destination="6jK-ku-uAO" id="Rof-Qw-435"/>
                         <outlet property="userImg" destination="Tf5-vX-gVA" id="4lO-y6-6gB"/>
                         <outlet property="usernameTxtField" destination="61g-Dh-GlY" id="cyx-PK-cjD"/>
                     </connections>
@@ -811,9 +812,10 @@
         <!--Profile-->
         <scene sceneID="bH6-CF-VtR">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Afn-V5-dM3" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Afn-V5-dM3" customClass="ProfileNavVC" customModule="NoteWork" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Profile" image="Gender Neutral User Filled" id="Rpm-oj-cxo"/>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="oiQ-lP-veU"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="vxo-gw-4vS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
